# termux-github-menu

./: README.md  cli.py  config.py  file.sh  github-menu-advanced-pinned-enhanced.sh  github-menu-advanced.sh  github_menu.py  main.py  pyproject.toml  readme.md  repo_select.py  utils.py
agent/: worker.py
autonomy/: controller.py
cli/: main.py
commands/: __init__.py  actions.py  branch.py  ci.py  clone.py  pull.py  ssh.py  watch.py
control/: manager.py
core/: config.py  utils.py
devops_os/agent/: worker.py
devops_os/cli/: main.py
devops_os/control_plane/: manager.py
devops_terminal/: cli.py  utils.py
devops_terminal/commands/: account.py  deploy.py  graphql.py  issue.py  oauth.py  pr.py  push.py  release.py  secrets.py
devops_terminal/core/: config.py  security.py
engine/: state.py
infrastructure_ai/ai/: engine.py
infrastructure_ai/decision/: logic.py
infrastructure_ai/learning/: memory.py
menu/: backup.py  clone.py  clone_repo.py  commit.py  create_repo.py  delete_all.py  git_config.py  list_repos.py  pin.py  pin_repo.py  pull.py  pull_repo.py  push.py  push_repo.py  repair.py  reset.py  status.py  unpin.py  watch.py
mesh/: bus.py
scheduler/: engine.py
server/: control.py
telemetry/: metrics.py
tui/: dashboard.py
