
[project]
name = "devops-full-integrated"
version = "1.0.0"
description = "Fully Integrated DevOps System (All Modules Preserved)"
authors = [{name="Integrated Build"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "rich",
    "psutil",
    "pydantic",
    "watchdog",
    "paramiko",
    "cryptography",
    "websockets",
    "textual"
]

[project.scripts]
dvt = "devops_terminal.cli:main"
dvos = "devops_os.cli.main:main"
